istio-system/istio-ingressgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: local-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.1.200  # Nginx Ingress IP 재사용
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.200  # 명시적 IP 지정
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
