istio-system/hubble-ui-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: huuble-ui-routes
  namespace: istio-system
  labels:
    app: hubble-ui
spec:
  hosts:
  - "hubble.jiminhome.shop"

  gateways:
  - blog-system/blog-gateway  # blog-system namespace의 Gateway 참조

  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: hubble-ui  # 같은 namespace 내 서비스
        port:
          number: 80
    timeout: 30s
